Set caret position in display, to fix #697.